log
Fri 12 Aug 2022 12:48:53 PM UTC: 
 tests:  0|7
total_score: 0/70
7633c33
Fri 12 Aug 2022 12:52:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
a0a512d
Fri 12 Aug 2022 12:54:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
692e307
Fri 12 Aug 2022 12:54:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
cc09ae8
Fri 12 Aug 2022 01:04:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:3: error: statement with no effect [-Werror=unused-value]
   40 |   *suma sumaN(a[],m);
      |   ^~~~~
exercises.c:40:8: error: expected ‘;’ before ‘sumaN’
   40 |   *suma sumaN(a[],m);
      |        ^~~~~~
      |        ;
cc1: all warnings being treated as errors
Compilation failed
00bf335
Fri 12 Aug 2022 01:09:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:20: error: expected expression before ‘]’ token
   40 |   * suma = sumaN(a[],m);
      |                    ^
Compilation failed
f1ef511
Fri 12 Aug 2022 01:09:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
3b3029a
